# GPUCompress

./: .gitignore  AUDIT_FINDINGS_cursor.md  AUDIT_REPORT.md  AUDIT_VERIFICATION.md  BUG_AUDIT.md  BUG_REPORT.md  CMakeLists.txt  CUDA_MEMCPY_AUDIT.md  CostModel.md  ENGINEERING_REVIEW.md  FIX_PLAN.md  OPTIMIZATION_REPORT.md  OVERVIEW.md  QUICKSTART.md  README.md  REQUIREMENTS.md  auditAGENT.md  bigger.txt  bubbly-conjuring-orbit.md  commands.md  final.txt  gs.txt  gs_output.txt  guideFromGPT.md  optimizerAGENT.md  out.txt  plan.md  res.txt  result.txt  synth.txt  warpx_used_inputs
.claude/: .nfsae84903792214b6800017120
benchmarks/: PLAN_kendall_tau.md  benchmark.sh  benchmark_grayscott_vol.cu  build_vpic_benchmark.sh  kendall_tau_profiler.cuh  overnight_vpic.sh  run_ai_paper.sh  run_all.sh  run_all_benchmarks.sh  run_repeated.sh  visualize.py  visualize_chunks.py  visualize_mape.py  vpic_benchmark_deck.cxx
cmake/: CoreLibrary.cmake  HDF5Filter.cmake  HDF5Vol.cmake  Tests.cmake
deploy/: gpucompress-build.yaml  run.sh  simulations.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  mpirun-wrapper.sh  run-4n4g-tests.sh
docs/: BENCHMARK_METRICS_PLAN.md  algo_memcpy_pipeline_baseline.md  code_review_summary.md  hdf5_integratio_qtable_adapt.md  hdf5_integration.md  multi_gpu_guide.md  reproducability.md
eval/: README.md  command_list.md  download_grayscott.py  download_well_data.py  eval_simulation.cpp  plot_mape.py  quick_test.cpp  run_eval_pipeline.sh  workload_adaptation.py
evaluations/: README.md
examples/: nn_vol_demo.cu  (+10 more)
synthetic/: CMakeLists.txt
(+408 files in other folders)
